Fixed post head spacing

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,6 +1,6 @@
 .post-head {
   border-bottom: 1px solid $grey;
-  margin-bottom: 1em;
+  margin: 2em 0;
   padding-bottom: 5px;
   position: relative;
 
